towards addressing #132, introducing coefficient look up and associated test