@@ -1,159 +1,68 @@
 package de.tum.bgu.msm.util;
 
 import de.tum.bgu.msm.data.Purpose;
+import de.tum.bgu.msm.resources.Resources;
 import org.apache.commons.csv.CSVFormat;
 import org.apache.commons.csv.CSVParser;
 import org.apache.commons.csv.CSVRecord;
 
-import java.io.File;
 import java.io.FileReader;
 import java.io.IOException;
 import java.nio.file.Path;
-import java.util.Map;
-import java.util.Properties;
-import java.util.concurrent.ConcurrentHashMap;
 
 public class ExtractCoefficient {
-    private static final org.apache.logging.log4j.Logger logger = org.apache.logging.log4j.LogManager.getLogger(ExtractCoefficient.class);
-
-    // Cache: Purpose -> Map<Row, Map<Column, Value>>
-    private static final Map<Purpose, Map<String, Map<String, Double>>> coefficientCache = new ConcurrentHashMap<>();
-
-    // Flag to enable test mode (looks in test directories first)
-    private static boolean testMode = false;
+    private static final org.apache.logging.log4j.Logger logger = org.apache.logging.log4j.LogManager.getLogger(uk.cam.mrc.phm.util.ExtractCoefficient.class);
 
     /**
-     * Set the test mode flag. When test mode is enabled, the class will first look for coefficient files
-     * in the test directories before falling back to the regular paths.
-     *
-     * @param isTestMode true to enable test mode, false to disable
+     * Extracts a coefficient from a CSV file based on purpose, column, and row.
+     * @param purpose The purpose for which to get the coefficient file
+     * @param targetColumn The target column name
+     * @param targetRow The target row name
+     * @return The coefficient value, or null if not found or error occurred
      */
-    public static void setTestMode(boolean isTestMode) {
-        testMode = isTestMode;
-        if (isTestMode) {
-            // Clear the cache when entering test mode to ensure fresh data
-            coefficientCache.clear();
-        }
-    }
-
-    /**
-     * Clear the coefficient cache to ensure fresh data is loaded from files.
-     * Useful for testing when data changes.
-     */
-    public static void clearCache() {
-        coefficientCache.clear();
-    }
-
     public static Double extractCoefficient(Purpose purpose, String targetColumn, String targetRow) {
         if (purpose == null || targetColumn == null || targetRow == null) {
-            logger.warn("Invalid input: purpose={}, targetColumn={}, targetRow={};  (returning 0.0)", purpose, targetColumn, targetRow);
-            return 0.0;
-        }
-
-        // Check cache first
-        Map<String, Map<String, Double>> table = coefficientCache.get(purpose);
-        if (table == null) {
-            // Not cached: load and parse CSV
-            Path csvFilePath = getCoefficientsFilePath(purpose);
-
-            if (csvFilePath == null) {
-                logger.error("CSV file path could not be determined for the given purpose: {}", purpose);
-                return 0.0;
-            }
-
-            table = loadCsvData(csvFilePath);
-            if (table != null && !table.isEmpty()) {
-                coefficientCache.put(purpose, table);
-            } else {
-                return 0.0; // Failed to load data
-            }
-        }
-
-        // Lookup value in cache
-        Map<String, Double> row = table.get(targetRow);
-        if (row != null) {
-            Double value = row.get(targetColumn);
-            if (value != null) {
-                return value;
-            } else {
-                // Don't log errors for columns that don't exist, just return 0
-                logger.debug("Value for targetColumn '{}' not found in row '{}'", targetColumn, targetRow);
-            }
-        } else {
-            // Don't log errors for rows that don't exist, just return 0
-            logger.debug("Row for targetRow '{}' not found", targetRow);
-        }
-
-        return 0.0; // Return 0 if no match is found
-    }
-
-    /**
-     * Determine the path to the coefficients file based on various fallback strategies
-     */
-    private static Path getCoefficientsFilePath(Purpose purpose) {
-        Path csvFilePath = null;
-
-        if (testMode) {
-            String testPath = "src/test/java/de/tum/bgu/msm/util/mc_coefficients_" + purpose.toString().toLowerCase() + ".csv";
-            File testFile = new File(testPath);
-            if (testFile.exists()) {
-                csvFilePath = testFile.toPath();
-            }
-        } else {
-            Properties props = MelbourneImplementationConfig.getMitoBaseProperties();
-            String path = props.getProperty("MC_COEFFICIENTS", "input/mito/modeChoice/mc_coefficients");
-
-            if (path != null && !path.isEmpty()) {
-                File file = new File(String.format("%s_%s.csv", path, purpose.toString().toLowerCase()));
-                if (file.exists()) {
-                    csvFilePath = file.toPath();
-                }
-            }
-        }
-
-        return csvFilePath;
-    }
-
-    private static Map<String, Map<String, Double>> loadCsvData(Path csvFilePath) {
-        if (csvFilePath == null || !new File(csvFilePath.toString()).exists()) {
-            logger.error("CSV file does not exist: {}", csvFilePath);
+            logger.error("Invalid input: purpose, targetColumn, or targetRow is null.");
             return null;
         }
 
-        Map<String, Map<String, Double>> table = new ConcurrentHashMap<>();
+        Path csvFilePath = Resources.instance.getModeChoiceCoefficients(purpose);
+        if (csvFilePath == null) {
+            logger.error("CSV file path is null for the given purpose: {}", purpose);
+            return null;
+        }
 
         try (CSVParser parser = new CSVParser(
-                new FileReader(String.valueOf(csvFilePath)),
+                new FileReader(csvFilePath.toString()),
                 CSVFormat.Builder.create()
                         .setHeader()
                         .setSkipHeaderRecord(true)
                         .build()
         )) {
             for (CSVRecord record : parser) {
-                String rowKey = record.get(0);
-                if (rowKey == null) continue;
-                Map<String, Double> row = new ConcurrentHashMap<>();
-
-                // Get all header names except the first one (which is the row key column)
-                for (String colName : parser.getHeaderNames()) {
-                    if (colName.equals(parser.getHeaderNames().getFirst())) continue;
-
-                    String value = record.get(colName);
-                    if (value != null && !value.isEmpty()) {
+                if (record.get(0) != null && record.get(0).equalsIgnoreCase(targetRow)) {
+                    String value = record.get(targetColumn);
+                    if (value != null && !value.trim().isEmpty()) {
                         try {
-                            row.put(colName, Double.valueOf(value));
+                            return Double.valueOf(value.trim());
                         } catch (NumberFormatException e) {
-                            logger.warn("Invalid number format for value '{}' in column '{}': {}",
-                                    value, colName, e.getMessage());
+                            logger.error("Error parsing value '{}' to Double for row '{}' and column '{}': {}",
+                                    value, targetRow, targetColumn, e.getMessage());
+                            return null;
                         }
+                    } else {
+                        logger.warn("Value for targetColumn '{}' in row '{}' is null or empty.", targetColumn, targetRow);
+                        return null;
                     }
                 }
-                table.put(rowKey, row);
             }
-            return table;
         } catch (IOException e) {
-            logger.error("Error reading CSV file {}: {}", csvFilePath, e.getMessage());
+            logger.error("Error reading CSV file '{}': {}", csvFilePath, e.getMessage());
             return null;
         }
+
+        // No matching record found
+        logger.warn("No matching record found for row '{}' in CSV file for purpose '{}'", targetRow, purpose);
+        return null;
     }
 }
